--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wow-roulette",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -21,5 +21,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
-  }
+  },
+  "author": "Miroslav Taleiko <mtaleiko@gmail.com>"
 }
